--- a/MusicDecrypto.Avalonia/Pages/HomePage.axaml
+++ b/MusicDecrypto.Avalonia/Pages/HomePage.axaml
@@ -22,7 +22,7 @@
 			<ItemsControl Items="{Binding Items}">
 				<ItemsControl.Styles>
 					<Style Selector="TextBlock">
-						<Setter Property="TextWrapping" Value="Wrap" />
+						<Setter Property="TextWrapping" Value="NoWrap" />
 						<Setter Property="TextTrimming" Value="WordEllipsis" />
 					</Style>
 					<Style Selector="TextBlock.CaptionTextBlockStyle">
