Refactor and support QMC online matching

--- a/MusicDecrypto.Avalonia/Controls/OptionsDisplayItem.axaml
+++ b/MusicDecrypto.Avalonia/Controls/OptionsDisplayItem.axaml
@@ -1,27 +1,20 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ic="using:FluentIcons.Avalonia"
+        xmlns:ic="using:FluentIcons.FluentAvalonia"
         xmlns:local="using:MusicDecrypto.Avalonia.Controls">
 
     <Design.PreviewWith>
-        <Border Padding="20" MinHeight="300" MinWidth="400">
+        <Border MinWidth="400" MinHeight="300" Padding="20">
             <StackPanel>
-                <local:OptionsDisplayItem Header="Header"
-                                          Description="This is a description of whatver this does"
-                                          Icon="Save"
-                                          Navigates="True"/>
+                <local:OptionsDisplayItem Description="This is a description of whatver this does" Header="Header"
+                                          Icon="Save" Navigates="True" />
 
-                <local:OptionsDisplayItem Header="Header"
-                                          Description="This is a description of whatver this does"
-                                          Icon="Save"
-                                          Expands="True"
-                                          Content="Hello World"/>
+                <local:OptionsDisplayItem Content="Hello World" Description="This is a description of whatver this does"
+                                          Expands="True" Header="Header" Icon="Save" />
 
-                <local:OptionsDisplayItem Header="Header" Classes="Vertical"
-                                          Description="This is a description of whatver this does"
-                                          Icon="Save"
-                                          Expands="True"
-                                          Content="Hello World" />
+                <local:OptionsDisplayItem Classes="Vertical" Content="Hello World"
+                                          Description="This is a description of whatver this does" Expands="True"
+                                          Header="Header" Icon="Save" />
             </StackPanel>
         </Border>
     </Design.PreviewWith>
@@ -36,57 +29,46 @@
             <ControlTemplate>
                 <StackPanel>
                     <Border Name="LayoutRoot"
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        Padding="16"
-                        CornerRadius="{TemplateBinding CornerRadius}">
+                            Padding="16"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid ColumnDefinitions="Auto,*,Auto,Auto">
                             <Viewbox Name="IconHost"
                                      Grid.RowSpan="2"
                                      Width="24" Height="24"
-                                     Margin="0 6 12 6"
-                                     VerticalAlignment="Center">
+                                     Margin="0,6,12,6" VerticalAlignment="Center">
                                 <ContentPresenter Content="{TemplateBinding Icon}" />
                             </Viewbox>
 
-                            <StackPanel Grid.Column="1" Margin="4 0 0 0" VerticalAlignment="Center">
+                            <StackPanel Grid.Column="1" Margin="4,0,0,0" VerticalAlignment="Center">
                                 <TextBlock Grid.Column="2"
-                                           Classes="BodyTextBlockStyle"
-                                           Text="{TemplateBinding Header}"
-                                           TextTrimming="WordEllipsis"/>
+                                           Classes="BodyTextBlockStyle" Text="{TemplateBinding Header}"
+                                           TextTrimming="WordEllipsis" />
 
                                 <TextBlock Grid.Column="2"
-                                           Classes="CaptionTextBlockStyle"
                                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                           Text="{TemplateBinding Description}"
-                                           TextWrapping="Wrap"/>
+                                           Classes="CaptionTextBlockStyle" Text="{TemplateBinding Description}"
+                                           TextWrapping="Wrap" />
                             </StackPanel>
 
-                            <ContentPresenter Grid.Column="2"
-                                              Content="{TemplateBinding ActionButton}"
-                                              VerticalAlignment="Center" />
+                            <ContentPresenter Grid.Column="2" VerticalAlignment="Center" Content="{TemplateBinding ActionButton}" />
 
                             <ic:SymbolIcon Name="Chevron"
                                            Grid.Column="3"
-                                           Margin="12 0 0 0"
-                                           VerticalAlignment="Center"
+                                           Margin="12,0,0,0" VerticalAlignment="Center"
                                            FontSize="18" />
                         </Grid>
                     </Border>
 
                     <ContentPresenter Name="ExpandedContentPresenter"
-                                      Content="{TemplateBinding Content}"
-                                      VerticalContentAlignment="Stretch"
-                                      HorizontalContentAlignment="Stretch"
-                                      VerticalAlignment="Stretch"
-                                      HorizontalAlignment="Stretch"
-                                      Grid.Row="2"
+                                      Grid.Row="2" Grid.ColumnSpan="4"
+                                      Padding="16" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                      HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"
                                       Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                                      BorderBrush="{TemplateBinding BorderBrush}"
-                                      BorderThickness="1 0 1 1"
-                                      Grid.ColumnSpan="4"
-                                      Padding="16"/>
+                                      BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,0,1,1"
+                                      Content="{TemplateBinding Content}" />
                 </StackPanel>
             </ControlTemplate>
         </Setter>
@@ -119,10 +101,10 @@
         <Setter Property="Symbol" Value="ChevronRight" />
     </Style>
 
-	<Style Selector="local|OptionsDisplayItem:links /template/ ic|SymbolIcon#Chevron">
-		<Setter Property="IsVisible" Value="True" />
-		<Setter Property="Symbol" Value="Open" />
-	</Style>
+    <Style Selector="local|OptionsDisplayItem:links /template/ ic|SymbolIcon#Chevron">
+        <Setter Property="IsVisible" Value="True" />
+        <Setter Property="Symbol" Value="Open" />
+    </Style>
 
     <Style Selector="local|OptionsDisplayItem:expands /template/ ic|SymbolIcon#Chevron">
         <Setter Property="IsVisible" Value="True" />
@@ -143,36 +125,33 @@
     </Style>
 
 
-    <!-- Vertical Style -->
+    <!--  Vertical Style  -->
     <Style Selector="local|OptionsDisplayItem.Vertical">
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Name="LayoutRoot"
+                        Padding="16"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        Padding="16"
                         CornerRadius="{TemplateBinding CornerRadius}">
                     <Grid RowDefinitions="*,*,*">
                         <Border Width="72" Height="72"
                                 Margin="8"
-                                CornerRadius="{StaticResource OverlayCornerRadius}"
-                                ClipToBounds="True"
-                                Background="Transparent">
+                                Background="Transparent"
+                                ClipToBounds="True" CornerRadius="{StaticResource OverlayCornerRadius}">
                             <Viewbox Name="IconHost">
                                 <ContentPresenter Content="{TemplateBinding Icon}" />
                             </Viewbox>
                         </Border>
 
                         <TextBlock Grid.Row="1"
-                                   Classes="BaseTextBlockStyle"
-                                   Text="{TemplateBinding Header}"
+                                   Classes="BaseTextBlockStyle" Text="{TemplateBinding Header}"
                                    TextTrimming="WordEllipsis" />
 
                         <TextBlock Grid.Row="2"
-                                   Classes="CaptionTextBlockStyle"
                                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                   Text="{TemplateBinding Description}"
+                                   Classes="CaptionTextBlockStyle" Text="{TemplateBinding Description}"
                                    TextWrapping="Wrap" />
                     </Grid>
                 </Border>
