--- a/MusicDecrypto.Avalonia/Pages/SettingsPage.axaml
+++ b/MusicDecrypto.Avalonia/Pages/SettingsPage.axaml
@@ -1,25 +1,28 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+<UserControl x:Class="MusicDecrypto.Avalonia.Pages.SettingsPage"
+             xmlns="https://github.com/avaloniaui"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:ctrl="using:MusicDecrypto.Avalonia.Controls"
-             xmlns:ic="using:FluentIcons.Avalonia"
+             xmlns:ic="using:FluentIcons.FluentAvalonia"
+             xmlns:ui="using:FluentAvalonia.UI.Controls"
              xmlns:vm="using:MusicDecrypto.Avalonia.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="MusicDecrypto.Avalonia.Pages.SettingsPage">
-    
+             d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d">
+
     <Design.DataContext>
         <vm:SettingsViewModel />
     </Design.DataContext>
 
     <ScrollViewer>
-        <StackPanel Margin="24" Orientation="Vertical" Spacing="8">
+        <StackPanel Orientation="Vertical" Margin="24" Spacing="8">
 
             <Grid ColumnDefinitions="Auto,*,Auto,Auto">
                 <Grid.Styles>
                     <Style Selector="Button.AppBarButton">
                         <Setter Property="Padding" Value="8" />
                         <Setter Property="Margin" Value="8 0 0 0" />
+                        <Setter Property="BorderThickness" Value="0" />
                     </Style>
                     <Style Selector="Button.AppBarButton Image">
                         <Setter Property="Width" Value="36" />
@@ -30,65 +33,76 @@
                     </Style>
                 </Grid.Styles>
 
-                <Image Height="64" Width="64" HorizontalAlignment="Left" Source="/Assets/logo.ico" />
-                
-                <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="12 0 0 0">
-                    <TextBlock Classes="SubtitleTextBlockStyle" Text="MusicDecrypto" />
-                    <TextBlock Classes="BodyTextBlockStyle" Text="{Binding Version, StringFormat='Version {0}'}"
-                               Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
+                <Image Width="64" Height="64" HorizontalAlignment="Left"
+                       Source="/Assets/logo.ico"
+                       RenderOptions.BitmapInterpolationMode="HighQuality" />
+
+                <StackPanel Grid.Column="1"
+                            Margin="12,0,0,0" VerticalAlignment="Center">
+                    <TextBlock Theme="{StaticResource FluentSubtitleTextBlockStyle}" Text="MusicDecrypto" />
+                    <TextBlock Theme="{StaticResource FluentBodyTextBlockStyle}"
+                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                               Text="{Binding Version, StringFormat='Version {0}'}" />
                 </StackPanel>
 
-                <Button Grid.Column="2" Classes="AppBarButton"
-                        Command="{Binding OpenAvaloniaLink}">
+                <Button Grid.Column="2"
+                        Theme="{StaticResource TransparentButton}"
+                        Classes="AppBarButton" Command="{Binding OpenAvaloniaLink}">
                     <Button.Content>
-                        <Grid ColumnDefinitions="Auto,8,Auto"
-                              RowDefinitions="Auto,Auto">
-                            <Image Grid.RowSpan="2" Source="/Assets/logo-avalonia.ico" />
-                            <TextBlock Grid.Column="2" Grid.Row="0"
-                                       Classes="CaptionTextBlockStyle"
+                        <Grid ColumnDefinitions="Auto,8,Auto" RowDefinitions="Auto,Auto">
+                            <Image Grid.RowSpan="2"
+                                   Source="/Assets/logo-avalonia.ico"
+                                   RenderOptions.BitmapInterpolationMode="HighQuality" />
+                            <TextBlock Grid.Row="0" Grid.Column="2"
+                                       Theme="{StaticResource FluentCaptionTextBlockStyle}"
                                        Text="Powered by" />
-                            <TextBlock Grid.Column="2" Grid.Row="1"
-                                       Classes="BodyStrongTextBlockStyle"
+                            <TextBlock Grid.Row="1" Grid.Column="2"
+                                       Theme="{StaticResource FluentBodyStrongTextBlockStyle}"
                                        Text="Avalonia" />
                         </Grid>
                     </Button.Content>
                 </Button>
 
-                <Button Grid.Column="3" Classes="AppBarButton"
-                        Command="{Binding OpenFluentAvaloniaLink}">
+                <Button Grid.Column="3"
+                        Theme="{StaticResource TransparentButton}"
+                        Classes="AppBarButton" Command="{Binding OpenFluentAvaloniaLink}">
                     <Button.Content>
-                        <Grid ColumnDefinitions="Auto,8,Auto"
-                              RowDefinitions="Auto,Auto">
-                            <Image Grid.RowSpan="2" Source="/Assets/logo-fluentavalonia.ico" />
-                            <TextBlock Grid.Column="2" Grid.Row="0"
-                                       Classes="CaptionTextBlockStyle"
+                        <Grid ColumnDefinitions="Auto,8,Auto" RowDefinitions="Auto,Auto">
+                            <Image Grid.RowSpan="2"
+                                   Source="/Assets/logo-fluentavalonia.ico"
+                                   RenderOptions.BitmapInterpolationMode="HighQuality" />
+                            <TextBlock Grid.Row="0" Grid.Column="2"
+                                       Theme="{StaticResource FluentCaptionTextBlockStyle}"
                                        Text="Theme based on" />
-                            <TextBlock Grid.Column="2" Grid.Row="1"
-                                       Classes="BodyStrongTextBlockStyle"
+                            <TextBlock Grid.Row="1" Grid.Column="2"
+                                       Theme="{StaticResource FluentBodyStrongTextBlockStyle}"
                                        Text="FluentAvalonia" />
                         </Grid>
                     </Button.Content>
                 </Button>
 
             </Grid>
-            
-            <TextBlock Classes="BodyStrongTextBlockStyle" Margin="0 20 0 0" Text="Settings" />
 
-            <ctrl:OptionsDisplayItem Icon="PaintBrush" Header="Theme"
-                                     Description="Change the current app theme.">
-                <ctrl:OptionsDisplayItem.ActionButton>
-                    <ComboBox SelectedItem="{Binding CurrentAppTheme}"
-                              Items="{Binding AppThemes}"
-                              MinWidth="120"/>
-                </ctrl:OptionsDisplayItem.ActionButton>
-            </ctrl:OptionsDisplayItem>
+            <TextBlock Margin="0,20,0,0"
+                       Theme="{StaticResource FluentBodyStrongTextBlockStyle}"
+                       Text="Settings" />
 
-            <TextBlock Classes="BodyStrongTextBlockStyle" Margin="0 20 0 0" Text="About" />
+            <ui:SettingsExpander Description="Change the current app theme." Header="Theme"
+                                 IconSource="{StaticResource PaintBrushIcon}">
+                <ui:SettingsExpander.Footer>
+                    <ComboBox MinWidth="120"
+                              ItemsSource="{Binding AppThemes}" SelectedItem="{Binding CurrentAppTheme}" />
+                </ui:SettingsExpander.Footer>
+            </ui:SettingsExpander>
 
-            <ctrl:OptionsDisplayItem Icon="BoxMultiple" Header="Credits" Expands="True"
-                                     Description="Third party open-source projects.">
-                <ctrl:OptionsDisplayItem.Content>
-                    <ItemsControl Items="{Binding Credits}">
+            <TextBlock Margin="0,20,0,0"
+                       Theme="{StaticResource FluentBodyStrongTextBlockStyle}"
+                       Text="About" />
+
+            <ui:SettingsExpander Description="Third party open-source projects." Header="Credits"
+                                 IconSource="{StaticResource BoxMultipleIcon}">
+                <ui:SettingsExpanderItem>
+                    <ItemsControl ItemsSource="{Binding Credits}">
                         <ItemsControl.Styles>
                             <Style Selector="StackPanel.Row">
                                 <Setter Property="Orientation" Value="Horizontal" />
@@ -107,24 +121,23 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Classes="Row">
-                                    <ctrl:UrlTextBlock Text="{Binding Name}" Href="{Binding Url}" />
-                                    <TextBlock Classes="CaptionTextBlockStyle" Text="{Binding License, StringFormat='({0})'}" />
+                                    <ctrl:UrlTextBlock Href="{Binding Url}" Text="{Binding Name}" />
+                                    <TextBlock Theme="{StaticResource FluentCaptionTextBlockStyle}" Text="{Binding License, StringFormat='({0})'}" />
                                 </StackPanel>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
-                </ctrl:OptionsDisplayItem.Content>
-            </ctrl:OptionsDisplayItem>
+                </ui:SettingsExpanderItem>
+            </ui:SettingsExpander>
 
-            <ctrl:OptionsDisplayItem Icon="DocumentBulletList" Header="License"
-                                     Links="True" Href="https://www.gnu.org/licenses/agpl-3.0.html"
-                                     Description="This program is distributed under GNU AGPL-3.0." />
+            <ui:SettingsExpander ActionIconSource="{StaticResource OpenIcon}" Click="OnLicenseClick"
+                                 Description="This program is distributed under GNU AGPL-3.0." Header="License"
+                                 IconSource="{StaticResource DocumentBulletListIcon}" IsClickEnabled="True" />
 
-            <ctrl:OptionsDisplayItem Icon="Code" Header="GitHub repository"
-                                     Links="True" Href="https://github.com/davidxuang/MusicDecrypto"
-                                     Description="Check out the source code and get in touch." />
-
+            <ui:SettingsExpander ActionIconSource="{StaticResource OpenIcon}" Click="OnGitHubClick"
+                                 Description="Check out the source code." Header="GitHub repository"
+                                 IconSource="{StaticResource CodeIcon}" IsClickEnabled="True" />
         </StackPanel>
     </ScrollViewer>
-    
+
 </UserControl>
