--- a/MusicDecrypto.Avalonia/Controls/MatchDialogContent.axaml
+++ b/MusicDecrypto.Avalonia/Controls/MatchDialogContent.axaml
@@ -1,11 +1,12 @@
 <UserControl x:Class="MusicDecrypto.Avalonia.Controls.MatchDialogContent"
              xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d">
 
-    <DataGrid CanUserSortColumns="False" IsReadOnly="True" Items="{Binding Properties}">
+    <DataGrid ItemsSource="{Binding Properties}" IsReadOnly="True" CanUserSortColumns="False">
         <DataGrid.Columns>
             <DataGridTextColumn Binding="{Binding Key}" Header="Source" />
             <DataGridTextColumn Binding="{Binding Title}" Header="Title" />
