--- a/MusicDecrypto.Avalonia/Controls/UrlTextBlock.axaml
+++ b/MusicDecrypto.Avalonia/Controls/UrlTextBlock.axaml
@@ -6,17 +6,27 @@
     <Design.PreviewWith>
         <local:UrlTextBlock Text="External link" />
     </Design.PreviewWith>
+    <Design.PreviewWith>
+        <local:UrlTextBlock Text="External link" />
+    </Design.PreviewWith>
 
     <Style Selector="local|UrlTextBlock">
         <Setter Property="Foreground" Value="{DynamicResource AccentTextFillColorPrimaryBrush}" />
         <Setter Property="Template">
             <ControlTemplate>
                 <StackPanel Name="LayoutRoot" Orientation="Horizontal" Spacing="2">
-                    <TextBlock Classes="BodyStrongTextBlockStyle" Text="{TemplateBinding Text}" />
+                    <TextBlock Theme="{StaticResource FluentBodyStrongTextBlockStyle}" Text="{TemplateBinding Text}" />
                     <ic:SymbolIcon VerticalAlignment="Center" FontSize="14" Symbol="Open" />
                 </StackPanel>
             </ControlTemplate>
         </Setter>
+    </Style>
+
+    <Style Selector="local|UrlTextBlock /template/ StackPanel#LayoutRoot:pointerover TextBlock">
+        <Setter Property="Foreground" Value="{DynamicResource AccentTextFillColorTertiaryBrush}" />
+    </Style>
+    <Style Selector="local|UrlTextBlock:pressed /template/ StackPanel#LayoutRoot:pointerover TextBlock">
+        <Setter Property="Foreground" Value="{DynamicResource AccentTextFillColorSecondaryBrush}" />
     </Style>
 
     <Style Selector="local|UrlTextBlock /template/ StackPanel#LayoutRoot:pointerover TextBlock">
