--- a/MusicDecrypto.Avalonia/Pages/HomePage.axaml
+++ b/MusicDecrypto.Avalonia/Pages/HomePage.axaml
@@ -1,11 +1,12 @@
 <UserControl x:Class="MusicDecrypto.Avalonia.Pages.HomePage"
              xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ctrl="using:MusicDecrypto.Avalonia.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:ctrl="using:MusicDecrypto.Avalonia.Controls"
              xmlns:vm="using:MusicDecrypto.Avalonia.ViewModels"
-             mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d">
 
     <Design.DataContext>
         <vm:MainViewModel />
@@ -14,12 +15,13 @@
     <Grid>
         <TextBlock Grid.Row="1" Grid.ColumnSpan="3"
                    Padding="16" HorizontalAlignment="Center" VerticalAlignment="Center"
-                   Classes="SubtitleTextBlockStyle" IsVisible="{Binding IsEmpty}" Opacity=".25">
+                   Theme="{StaticResource FluentSubtitleTextBlockStyle}"
+                   Opacity=".25" IsVisible="{Binding IsEmpty}">
             Drag and drop here or use the button above.
         </TextBlock>
 
         <ScrollViewer DragDrop.AllowDrop="True">
-            <ItemsControl Items="{Binding Items}">
+            <ItemsControl ItemsSource="{Binding Items}">
                 <ItemsControl.Styles>
                     <Style Selector="TextBlock">
                         <Setter Property="TextWrapping" Value="NoWrap" />
@@ -31,8 +33,8 @@
                 </ItemsControl.Styles>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <ctrl:StaggeredPanel Padding="24" RowSpacing="8" ColumnSpacing="8"
-                                             DesiredColumnWidth="288" />
+                        <ctrl:StaggeredPanel DesiredColumnWidth="288" Padding="24" RowSpacing="8"
+                                             ColumnSpacing="8" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
@@ -40,21 +42,25 @@
                         <Border Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
                                 BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}" BorderThickness="1"
                                 CornerRadius="{DynamicResource ControlCornerRadius}">
-                            <Grid Margin="8" ColumnDefinitions="70,12,*" RowDefinitions="20,16,16,18">
+                            <Grid Margin="8"
+                                  ColumnDefinitions="70,12,*" RowDefinitions="20,16,16,18">
                                 <Border Grid.RowSpan="4"
                                         Background="{DynamicResource SolidBackgroundFillColorSecondaryBrush}"
                                         ClipToBounds="True" CornerRadius="2">
                                     <Image Source="{Binding Cover}" Stretch="UniformToFill" />
                                 </Border>
                                 <TextBlock Grid.Row="0" Grid.Column="2"
-                                           Classes="BaseTextBlockStyle" Text="{Binding Title}" />
+                                           Theme="{StaticResource FluentBaseTextBlockStyle}"
+                                           Text="{Binding Title}" />
                                 <TextBlock Grid.Row="1" Grid.Column="2"
-                                           Classes="CaptionTextBlockStyle" Text="{Binding Performers}" />
+                                           Theme="{StaticResource FluentCaptionTextBlockStyle}"
+                                           Text="{Binding Performers}" />
                                 <TextBlock Grid.Row="2" Grid.Column="2"
-                                           Classes="CaptionTextBlockStyle" Text="{Binding Album}" />
+                                           Theme="{StaticResource FluentCaptionTextBlockStyle}"
+                                           Text="{Binding Album}" />
                                 <TextBlock Grid.Row="3" Grid.Column="2"
-                                           Classes="CaptionTextBlockStyle" Text="{Binding Info}"
-                                           ToolTip.Tip="{Binding Messages}" />
+                                           Theme="{StaticResource FluentCaptionTextBlockStyle}"
+                                           Text="{Binding Info}" ToolTip.Tip="{Binding Messages}" />
                             </Grid>
                         </Border>
                     </DataTemplate>
